# nstd_any

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py
.github/workflows/: cmake-single-platform.yml
include/any/: nstd_any.hpp
include/nstd/data/: any.hpp
include/nstd/memory/: concepts.h  memory_location.h
include/nstd/memory/mempool/: MemPool.hpp
include/nstd/memory/smart_buffers/: buffer_base.hpp  released_buffer.hpp  shared_buffer.hpp  unique_buffer.hpp
include/nstd/types/: Singleton.h  any.hpp
src/nstd/: any.cpp
tests/: tests.cpp
tests/data/: any_tests.cpp
tests/memory/: MockDeleter.hpp  MockDeleter_util.cpp
tests/memory/mempool/: mempool_tests.cpp
tests/memory/smart_buffers/: shared_buffer_tests.cpp  unique_buffer_tests.cpp
tests/types/: any_tests.cpp  singleton_tests.cpp
